service congigurations have been implemented

--- a/SimpraApi/SimpraApi.Infrastructure/SimpraApi.Infrastructure.csproj
+++ b/SimpraApi/SimpraApi.Infrastructure/SimpraApi.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SimpraApi.Application\SimpraApi.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
